# New_Enhanced_RAG

./: .env.example  .env.recommended  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  domains.yaml  local.yaml  production.yaml  prompts.yaml
data/samples/: sample1.txt  sample2.txt  sample3.txt  test_document.txt
docker/: Dockerfile  docker-compose.yml
docs/: Makefile
docs/_build/html/: index.html
enhanced_rag/: __init__.py  pipeline.py
enhanced_rag/api/: __init__.py  cli.py  rest.py  schemas.py
enhanced_rag/core/: __init__.py  chunking.py
enhanced_rag/interfaces/: __init__.py  document_loader.py  embedder.py  llm_client.py  vector_store.py
enhanced_rag/utils/: __init__.py  config.py  correlation.py  logging.py  metrics.py  retry.py
scripts/: setup.py  test_setup.py
tests/: __init__.py
tests/integration/: __init__.py  test_integration_placeholder.py
tests/performance/: __init__.py  test_performance_placeholder.py
tests/unit/: __init__.py  test_chunking.py  test_cli_basic.py  test_config.py  test_correlation.py  test_interfaces.py  test_logging.py  test_metrics.py  test_pipeline.py  test_rest_api.py  test_retry.py  test_schemas.py
